# rusty-chess-game

./: Cargo.toml
src/: board.rs  main.rs  piece.rs
src/piece/: bishop.rs  king.rs  knight.rs  pawn.rs  queen.rs  rock.rs
